[BZ-1032621] increase default PermGen size for forked surefire JVM in integration tests
Increase default PermGen size for forked surefire JVM in integration tests
to avoid OutOfMemory PermGen space running EAP AS testsuite on OracleJDK 1.6 64bit